k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-test
  labels:
    app: python-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-test
  template:
    metadata:
      labels:
        app: python-test
    spec:
      containers:
      - name: python-test
        image: asherif310/python-test:v1 
        ports:
        - containerPort: 5000
