k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-test
spec:
  selector:
     app: python-test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
